--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@ chat='true'>
             <input type="tel" id="phoneNumber" name="phoneNumber" placeholder="Enter your phone number">
 
             
-            <button type="submit">Submit</button>
+            <input type="submit" onclick="identify_call()">
         </form>
         <p id="thankYouMessage" style="display: none;">Thanks for submitting the form!</p>
     </div>
